# pydal-adapter-libsql

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  setup.py
pydal_rqlite/: adapter_rqlite.py
