[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydal-libsql"
dynamic = ["version"]
description = "Custom pyDAL adapter for libsql (distributed SQLite)"
readme = "README.md"
requires-python = ">=3.10"
license-expression = "MIT"
authors = [
    {name = "Robin van der Noord", email = "robin.vdn@educationwarehouse.nl"}
]
urls = { "Homepage" = "https://github.com/educationwarehouse/pydal-adapter-libsql" }

dependencies = [
    "pydal",
    "pylibsql", # todo
]

[project.optional-dependencies]
# Uncomment and replace <DEV_REQUIREMENTS> with actual dev dependencies if you have them.
dev = [
    "hatch",
    "python-semantic-release<8",
]

[tool.setuptools.packages.find]
where = ["pydal_libsql"]

[tool.semantic_release]
branch = "master"
version_variable = "pydal_libsql/__about__.py:__version__"
change_log = "CHANGELOG.md"
upload_to_repository = false
upload_to_release = false
build_command = "hatch build"

[tool.hatch.version]
path = "pydal_libsql/__about__.py"
